# simplesmbios-rust

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  mem.rs  memerror.rs  smbios.rs
