[package]
name = "simplesmbios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
measurements = "*"
smbios-lib = "*"

[lints.clippy]
pedantic = {level="warn", priority = 0}
must_use_candidate = "allow"
unwrap_used = {level="warn", priority = 2}
stable_sort_primitive = {level="allow", priority = 1}
